fe - fix iframe wrap

--- a/frontend/starter/src/scss/base/_typography.scss
+++ b/frontend/starter/src/scss/base/_typography.scss
@@ -226,7 +226,8 @@ p {
 img {
 	max-width: 100%;
 }
-.iframe-wrap {
+.iframe-wrap,
+.embeditem {
 	padding-top: 56.25%;
 	width: 100%;
 	border: 0;
